--- a/buttons.html
+++ b/buttons.html
@@ -1,1 +1,2 @@
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" title="Bootstrap Style">
 <button class="btn hlz-btn"><span class="right-caret">Shop Now</span></button>
