--- a/buttons.html
+++ b/buttons.html
@@ -1,3 +1,10 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" title="Bootstrap Style">
+<h1>Helzberg Buttons</h1>
 <button class="btn hlz-btn"><span class="right-caret">Shop Now</span></button>
+<h2>Bootstrap buttons inside of a .btn-group wrapper</h2>
+<div class="btn-group" role="group" aria-label="...">
+  <button type="button" class="btn btn-default">Left</button>
+  <button type="button" class="btn btn-default">Middle</button>
+  <button type="button" class="btn btn-default">Right</button>
+</div>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
