--- a/buttons.html
+++ b/buttons.html
@@ -7,4 +7,8 @@
   <button type="button" class="btn btn-default">Middle</button>
   <button type="button" class="btn btn-default">Right</button>
 </div>
+<h2>Vday Buttons</h2>
+<a class="hlz-btn-link" href="">
+	<button class="btn hlz-btn hlz-btn-pnk"><span class="right-caret caret-red">Shop Gold Necklaces</span></button>
+</a>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
