--- a/buttons.html
+++ b/buttons.html
@@ -1,5 +1,5 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" title="Bootstrap Style">
-<h1>Helzberg Buttons</h1>
+<h1>Buttons</h1>
 <button class="btn hlz-btn"><span class="right-caret">Shop Now</span></button>
 <h2>Bootstrap buttons inside of a .btn-group wrapper</h2>
 <div class="btn-group" role="group" aria-label="...">
@@ -9,6 +9,6 @@
 </div>
 <h2>Vday Buttons</h2>
 <a class="hlz-btn-link" href="">
-	<button class="btn hlz-btn hlz-btn-pnk"><span class="right-caret caret-red">Shop Gold Necklaces</span></button>
+	<button class="btn hlz-btn hlz-btn-pnk"><span class="right-caret caret-red">Shop This Item</span></button>
 </a>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
