--- a/buttons.html
+++ b/buttons.html
@@ -1,5 +1,5 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" title="Bootstrap Style">
-<link href="styles.css" rel="stylesheet" title="Custom Style">
+<link href="styles.css" rel="stylesheet">
 <h1>Buttons</h1>
 <button class="btn hlz-btn"><span class="right-caret">Shop Now</span></button>
 <h2>Bootstrap buttons inside of a .btn-group wrapper</h2>
