--- a/buttons.html
+++ b/buttons.html
@@ -1,4 +1,5 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" title="Bootstrap Style">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
 <h1>Buttons</h1>
 <button class="btn hlz-btn"><span class="right-caret">Shop Now</span></button>
