--- a/buttons.html
+++ b/buttons.html
@@ -1,16 +1,20 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" title="Bootstrap Style">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 <link href="styles.css" rel="stylesheet">
-<h1>Buttons</h1>
-<button class="btn hlz-btn"><span class="right-caret">Shop Now</span></button>
-<h2>Bootstrap buttons inside of a .btn-group wrapper</h2>
-<div class="btn-group" role="group" aria-label="...">
-  <button type="button" class="btn btn-default">Left</button>
-  <button type="button" class="btn btn-default">Middle</button>
-  <button type="button" class="btn btn-default">Right</button>
+<div class="container-fluid">
+	<h1>Buttons</h1>
+	<a class="btn hlz-btn">
+		Shop Now
+	</a>
+	<h2>Bootstrap buttons inside of a .btn-group wrapper</h2>
+	<div class="btn-group" role="group" aria-label="...">
+	  <button type="button" class="btn btn-default">Left</button>
+	  <button type="button" class="btn btn-default">Middle</button>
+	  <button type="button" class="btn btn-default">Right</button>
+	</div>
+	<h2>Vday Buttons</h2>
+		<a class="btn hlz-btn hlz-btn-pnk" href="">
+			Shop This Item
+		</a>
 </div>
-<h2>Vday Buttons</h2>
-<a class="hlz-btn-link" href="">
-	<button class="btn hlz-btn hlz-btn-pnk"><span class="right-caret caret-red">Shop This Item</span></button>
-</a>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
